--- a/call.html
+++ b/call.html
@@ -261,7 +261,7 @@
 										<em>Author Notification</em> </td>
 								</tr>
 								<tr class="clickable-row past">
-									<td>Wednesday, 7 September, 2022</span><br />
+									<td>Wednesday, 7 September, 2022 <span style="font-size:0.7em;">(AoE)</span><br />
 										<em>Camera-ready Submission</em> </td>
 								</tr>
 								<tr class="clickable-row past">
