--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 				<div class="col-lg-4 col-md-6 align-self-center">
 					<div class="image-block bg-about">
 						<div class=""
-							style="background: #074f9e;padding-right: 20px;padding-left: 20px;padding-top: 15px;color:white;">
+							style="background: #074f9e;padding-right: 5px;padding-left: 5px;padding-top: 15px;color:white;">
 							<div class="panel-heading clearfix">
 								<div
 									style="text-transform:uppercase; font-family:Montserrat, sans-serif; text-align: center; padding-bottom:5px;">
@@ -166,7 +166,7 @@
 											<em>Author Notification</em> </td>
 									</tr>
 									<tr class="clickable-row past">
-										<td>Wednesday, 7 September, 2022</span><br />
+										<td>Wednesday, 7 September, 2022 <span style="font-size:0.7em;">(AoE)</span><br />
 											<em>Camera-ready Submission</em> </td>
 									</tr>
 									<tr class="clickable-row past">
