added pc members

--- a/committee.html
+++ b/committee.html
@@ -226,7 +226,7 @@
 					</div>
 					<div class="content text-center">
 						<h5><a href="https://peruma.me" target="_blank">Anthony Peruma</a></h5>
-						<p>Rochester Institute of Technology</p>
+						<p> University of Hawai‘i at Mānoa</p>
 						<span>WEB & PROCEEDINGS CHAIR</span>
 					</div>
 				</div>
@@ -246,8 +246,382 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-12">
-					Please check back later.
+			<!--<div class="col-lg-3 col-md-4 col-sm-6">
+				<div class="speaker-item">
+					<div class="image">
+						<img src="images/people/pc/Alesssandro_Garcia.jpg" alt="speaker" class="img-fluid">
+						<div class="primary-overlay"></div>
+						<div class="socials">
+							<ul class="list-inline">
+								<li class="list-inline-item"><a href="https://twitter.com/alessfgarcia" target="_blank"><i class="fa fa-twitter"></i></a></li>
+								<li class="list-inline-item"><a href="https://www-di.inf.puc-rio.br/~afgarcia/" target="_blank"><i class="fa fa-globe"></i></a></li>
+							</ul>
+						</div>
+					</div>
+					<div class="content text-center">
+						<h5><a href="https://www-di.inf.puc-rio.br/~afgarcia/" target="_blank">Alesssandro Garcia</a></h5>
+						<p>Pontifical Catholic University of Rio de Janeiro</p>
+					</div>
+				</div>
+			</div>-->
+			<div class="col-lg-3 col-md-4 col-sm-6">
+				<div class="speaker-item">
+					<div class="image">
+						<img src="images/people/pc/ali_ouni.jpg" alt="speaker" class="img-fluid">
+						<div class="primary-overlay"></div>
+						<div class="socials">
+							<ul class="list-inline">
+								<li class="list-inline-item"><a href="https://twitter.com/ouniaali" target="_blank"><i class="fa fa-twitter"></i></a></li>
+								<li class="list-inline-item"><a href="https://ouniali.github.io/" target="_blank"><i class="fa fa-globe"></i></a></li>
+							</ul>
+						</div>
+					</div>
+					<div class="content text-center">
+						<h5><a href="https://ouniali.github.io/" target="_blank">Ali Ouni</a></h5>
+						<p>ETS Montreal</p>
+					</div>
+				</div>
+			</div>
+			<!--<div class="col-lg-3 col-md-4 col-sm-6">
+				<div class="speaker-item">
+					<div class="image">
+						<img src="images/people/pc/Anna_Eilertsen.jpg" alt="speaker" class="img-fluid">
+						<div class="primary-overlay"></div>
+						<div class="socials">
+							<ul class="list-inline">
+								<li class="list-inline-item"><a href="https://twitter.com/annam_ei" target="_blank"><i class="fa fa-twitter"></i></a></li>
+								<li class="list-inline-item"><a href="https://annaei.github.io" target="_blank"><i class="fa fa-globe"></i></a></li>
+							</ul>
+						</div>
+					</div>
+					<div class="content text-center">
+						<h5><a href="https://annaei.github.io" target="_blank">Anna Eilertsen</a></h5>
+						<p>University of Bergen</p>
+					</div>
+				</div>
+			</div>-->
+			<div class="col-lg-3 col-md-4 col-sm-6">
+				<div class="speaker-item">
+					<div class="image">
+						<img src="images/people/pc/christian_newman.jpg" alt="speaker" class="img-fluid">
+						<div class="primary-overlay"></div>
+						<div class="socials">
+							<ul class="list-inline">
+								<li class="list-inline-item"><a href="https://twitter.com/sourceslicer" target="_blank"><i class="fa fa-twitter"></i></a></li>
+								<li class="list-inline-item"><a href="https://www.se.rit.edu/~cnewman/" target="_blank"><i class="fa fa-globe"></i></a></li>
+							</ul>
+						</div>
+					</div>
+					<div class="content text-center">
+						<h5><a href="https://www.se.rit.edu/~cnewman/" target="_blank">Christian Newman</a></h5>
+						<p>Rochester Institute of Technology</p>
+					</div>
+				</div>
+			</div>
+			<!--<div class="col-lg-3 col-md-4 col-sm-6">
+				<div class="speaker-item">
+					<div class="image">
+						<img src="images/people/pc/Dae-Kyoo_Kim.jpg" alt="speaker" class="img-fluid">
+						<div class="primary-overlay"></div>
+						<div class="socials">
+							<ul class="list-inline">
+								<li class="list-inline-item"><a href="#" target="_blank"><i class="fa fa-twitter"></i></a></li>
+								<li class="list-inline-item"><a href="https://oakland.edu/secs/directory/kim" target="_blank"><i class="fa fa-globe"></i></a></li>							</ul>
+						</div>
+					</div>
+					<div class="content text-center">
+						<h5><a href="https://oakland.edu/secs/directory/kim" target="_blank">Dae-Kyoo Kim</a></h5>
+						<p>Oakland University</p>
+					</div>
+				</div>
+			</div>-->
+			<div class="col-lg-3 col-md-4 col-sm-6">
+				<div class="speaker-item">
+					<div class="image">
+						<img src="images/people/pc/Eunjong_Choi.jpg" alt="speaker" class="img-fluid">
+						<div class="primary-overlay"></div>
+						<div class="socials">
+							<ul class="list-inline">
+								<li class="list-inline-item"><a href="https://twitter.com/ejchoi710" target="_blank"><i class="fa fa-twitter"></i></a></li>
+								<li class="list-inline-item"><a href="https://sites.google.com/site/ejchoi710/" target="_blank"><i class="fa fa-globe"></i></a></li>							</ul>
+						</div>
+					</div>
+					<div class="content text-center">
+						<h5><a href="https://sites.google.com/site/ejchoi710/" target="_blank">Enjong Choi</a></h5>
+						<p>Kyoto Institute of Technology</p>
+					</div>
+				</div>
+			</div>
+			<!--<div class="col-lg-3 col-md-4 col-sm-6">
+				<div class="speaker-item">
+					<div class="image">
+						<img src="images/people/pc/Foutse_Khomh.jpg" alt="speaker" class="img-fluid">
+						<div class="primary-overlay"></div>
+						<div class="socials">
+							<ul class="list-inline">
+								<li class="list-inline-item"><a href="https://twitter.com/SWATLab" target="_blank"><i class="fa fa-twitter"></i></a></li>
+								<li class="list-inline-item"><a href="http://www.khomh.net" target="_blank"><i class="fa fa-globe"></i></a></li>							</ul>
+						</div>
+					</div>
+					<div class="content text-center">
+						<h5><a href="http://www.khomh.net" target="_blank">Foutse Khomh</a></h5>
+						<p>Polytechnique Montréal</p>
+					</div>
+				</div>
+			</div>-->
+			<div class="col-lg-3 col-md-4 col-sm-6">
+				<div class="speaker-item">
+					<div class="image">
+						<img src="images/people/person_placeholder.jpg" alt="speaker" class="img-fluid">
+						<!--<div class="primary-overlay"></div>
+						<div class="socials">
+							<ul class="list-inline">
+								<li class="list-inline-item"><a href="#" target="_blank"><i class="fa fa-twitter"></i></a></li>
+								<li class="list-inline-item"><a href="#" target="_blank"><i class="fa fa-globe"></i></a></li>							</ul>
+						</div>-->
+					</div>
+					<div class="content text-center">
+						<h5><a href="#" target="_blank">Francesca Fontana</a></h5>
+						<p>University of Milano-Bicocca</p>
+					</div>
+				</div>
+			</div>
+			<div class="col-lg-3 col-md-4 col-sm-6">
+				<div class="speaker-item">
+					<div class="image">
+						<img src="images/people/pc/Gustavo_Soares.jpg" alt="speaker" class="img-fluid">
+						<div class="primary-overlay"></div>
+						<div class="socials">
+							<ul class="list-inline">
+								<li class="list-inline-item"><a href="https://twitter.com/gustavoas" target="_blank"><i class="fa fa-twitter"></i></a></li>
+								<li class="list-inline-item"><a href="https://www.microsoft.com/en-us/research/people/gsoares/" target="_blank"><i class="fa fa-globe"></i></a></li>							</ul>
+						</div>
+					</div>
+					<div class="content text-center">
+						<h5><a href="https://www.microsoft.com/en-us/research/people/gsoares/" target="_blank">Gustavo Soares</a></h5>
+						<p>Microsoft</p>
+					</div>
+				</div>
+			</div>
+			<div class="col-lg-3 col-md-4 col-sm-6">
+				<div class="speaker-item">
+					<div class="image">
+						<img src="images/people/pc/James_Ivers.jpg" alt="speaker" class="img-fluid">
+						<div class="primary-overlay"></div>
+						<div class="socials">
+							<ul class="list-inline">
+								<li class="list-inline-item"><a href="https://scholar.google.com/citations?user=IrL_RkYAAAAJ&hl=en" target="_blank"><i class="fa fa-globe"></i></a></li>							</ul>
+						</div>
+					</div>
+					<div class="content text-center">
+						<h5><a href="https://scholar.google.com/citations?user=IrL_RkYAAAAJ&hl=en" target="_blank">James Ivers</a></h5>
+						<p>Carnegie Mellon University</p>
+					</div>
+				</div>
+			</div>
+			<div class="col-lg-3 col-md-4 col-sm-6">
+				<div class="speaker-item">
+					<div class="image">
+						<img src="images/people/pc/Mehdi_Bagherzadeh.jpg" alt="speaker" class="img-fluid">
+						<div class="primary-overlay"></div>
+						<div class="socials">
+							<ul class="list-inline">
+								<li class="list-inline-item"><a href="https://twitter.com/mbagherz" target="_blank"><i class="fa fa-twitter"></i></a></li>
+								<li class="list-inline-item"><a href="https://mbagherz.bitbucket.io" target="_blank"><i class="fa fa-globe"></i></a></li>							</ul>
+						</div>
+					</div>
+					<div class="content text-center">
+						<h5><a href="https://mbagherz.bitbucket.io" target="_blank">Mehdi Bagherzadeh</a></h5>
+						<p>Oakland University</p>
+					</div>
+				</div>
+			</div>
+			<!--<div class="col-lg-3 col-md-4 col-sm-6">
+				<div class="speaker-item">
+					<div class="image">
+						<img src="images/people/pc/Mel_Ó_Cinnéide.jpg" alt="speaker" class="img-fluid">
+						<div class="primary-overlay"></div>
+						<div class="socials">
+							<ul class="list-inline">
+								<li class="list-inline-item"><a href="https://twitter.com/melocinneide" target="_blank"><i class="fa fa-twitter"></i></a></li>
+								<li class="list-inline-item"><a href="https://people.ucd.ie/mel.ocinneide" target="_blank"><i class="fa fa-globe"></i></a></li>							</ul>
+						</div>
+					</div>
+					<div class="content text-center">
+						<h5><a href="https://people.ucd.ie/mel.ocinneide" target="_blank">Mel Ó Cinnéide</a></h5>
+						<p>University College Dublin</p>
+					</div>
+				</div>
+			</div>-->
+			<div class="col-lg-3 col-md-4 col-sm-6">
+				<div class="speaker-item">
+					<div class="image">
+						<img src="images/people/pc/mohamed_mkaouer.jpg" alt="speaker" class="img-fluid">
+						<div class="primary-overlay"></div>
+						<div class="socials">
+							<ul class="list-inline">
+								<li class="list-inline-item"><a href="https://twitter.com/mwmkaouer" target="_blank"><i class="fa fa-twitter"></i></a></li>
+								<li class="list-inline-item"><a href="http://www.se.rit.edu/~mwm/" target="_blank"><i class="fa fa-globe"></i></a></li>							</ul>
+						</div>
+					</div>
+					<div class="content text-center">
+						<h5><a href="http://www.se.rit.edu/~mwm/" target="_blank">Mohamed Wiem Mkaouer</a></h5>
+						<p>Rochester Institute of Technology</p>
+					</div>
+				</div>
+			</div>
+			<!--<div class="col-lg-3 col-md-4 col-sm-6">
+				<div class="speaker-item">
+					<div class="image">
+						<img src="images/people/pc/Mohammad_Alshayeb.jpg" alt="speaker" class="img-fluid">
+						<div class="primary-overlay"></div>
+						<div class="socials">
+							<ul class="list-inline">
+								<li class="list-inline-item"><a href="https://twitter.com/malshayeb" target="_blank"><i class="fa fa-twitter"></i></a></li>
+								<li class="list-inline-item"><a href="https://www.alshayeb.com" target="_blank"><i class="fa fa-globe"></i></a></li>							</ul>
+						</div>
+					</div>
+					<div class="content text-center">
+						<h5><a href="https://www.alshayeb.com" target="_blank">Mohammad Alshayeb</a></h5>
+						<p>King Fahd University of Petroleum and Minerals</p>
+					</div>
+				</div>
+			</div>-->
+			<div class="col-lg-3 col-md-4 col-sm-6">
+				<div class="speaker-item">
+					<div class="image">
+						<img src="images/people/pc/Nikolaos_Tsantalis.jpg" alt="speaker" class="img-fluid">
+						<div class="primary-overlay"></div>
+						<div class="socials">
+							<ul class="list-inline">
+								<li class="list-inline-item"><a href="https://twitter.com/NikosTsantalis" target="_blank"><i class="fa fa-twitter"></i></a></li>
+								<li class="list-inline-item"><a href="https://users.encs.concordia.ca/~nikolaos/" target="_blank"><i class="fa fa-globe"></i></a></li>							</ul>
+						</div>
+					</div>
+					<div class="content text-center">
+						<h5><a href="https://users.encs.concordia.ca/~nikolaos/" target="_blank">Nikolaos Tsantalis</a></h5>
+						<p>Concordia University</p>
+					</div>
+				</div>
+			</div>
+			<div class="col-lg-3 col-md-4 col-sm-6">
+				<div class="speaker-item">
+					<div class="image">
+						<img src="images/people/pc/Norihiro_Yoshida.jpg" alt="speaker" class="img-fluid">
+						<div class="primary-overlay"></div>
+						<div class="socials">
+							<ul class="list-inline">
+								<li class="list-inline-item"><a href="https://twitter.com/NorihiroYoshida" target="_blank"><i class="fa fa-twitter"></i></a></li>
+								<li class="list-inline-item"><a href="https://sites.google.com/site/yoshidaatnu/" target="_blank"><i class="fa fa-globe"></i></a></li>							</ul>
+						</div>
+					</div>
+					<div class="content text-center">
+						<h5><a href="https://sites.google.com/site/yoshidaatnu/" target="_blank">Norihiro Yoshida</a></h5>
+						<p>Nagoya University</p>
+					</div>
+				</div>
+			</div>
+			<!--<div class="col-lg-3 col-md-4 col-sm-6">
+				<div class="speaker-item">
+					<div class="image">
+						<img src="images/people/pc/Serge_Demeyer.jpg" alt="speaker" class="img-fluid">
+						<div class="primary-overlay"></div>
+						<div class="socials">
+							<ul class="list-inline">
+								<li class="list-inline-item"><a href="https://twitter.com/DemeyerSerge" target="_blank"><i class="fa fa-twitter"></i></a></li>
+								<li class="list-inline-item"><a href="https://win.uantwerpen.be/~sdemey/" target="_blank"><i class="fa fa-globe"></i></a></li>							</ul>
+						</div>
+					</div>
+					<div class="content text-center">
+						<h5><a href="https://win.uantwerpen.be/~sdemey/" target="_blank">Serge Demeyer</a></h5>
+						<p>University of Antwerp</p>
+					</div>
+				</div>
+			</div>-->
+			<!--<div class="col-lg-3 col-md-4 col-sm-6">
+				<div class="speaker-item">
+					<div class="image">
+						<img src="images/people/pc/Shinpei_Hayashi.jpg" alt="speaker" class="img-fluid">
+						<div class="primary-overlay"></div>
+						<div class="socials">
+							<ul class="list-inline">
+								<li class="list-inline-item"><a href="https://twitter.com/sh5i" target="_blank"><i class="fa fa-twitter"></i></a></li>
+								<li class="list-inline-item"><a href="https://www.se.cs.titech.ac.jp/~hayashi/" target="_blank"><i class="fa fa-globe"></i></a></li>							</ul>
+						</div>
+					</div>
+					<div class="content text-center">
+						<h5><a href="https://www.se.cs.titech.ac.jp/~hayashi/" target="_blank">Shinpei Hayashi</a></h5>
+						<p>Tokyo Institute of Technology</p>
+					</div>
+				</div>
+			</div>-->
+			<div class="col-lg-3 col-md-4 col-sm-6">
+				<div class="speaker-item">
+					<div class="image">
+						<img src="images/people/pc/Timofey_Bryksin.jpg" alt="speaker" class="img-fluid">
+						<div class="primary-overlay"></div>
+						<div class="socials">
+							<ul class="list-inline">
+								<li class="list-inline-item"><a href="https://twitter.com/timofeybryksin" target="_blank"><i class="fa fa-twitter"></i></a></li>
+								<li class="list-inline-item"><a href="https://research.jetbrains.org/researchers/timofey.bryksin" target="_blank"><i class="fa fa-globe"></i></a></li>							</ul>
+						</div>
+					</div>
+					<div class="content text-center">
+						<h5><a href="https://research.jetbrains.org/researchers/timofey.bryksin" target="_blank">Timofey Bryksin</a></h5>
+						<p>JetBrains Research</p>
+					</div>
+				</div>
+			</div>
+			<!--<div class="col-lg-3 col-md-4 col-sm-6">
+				<div class="speaker-item">
+					<div class="image">
+						<img src="images/people/pc/Tushar_Sharma.jpg" alt="speaker" class="img-fluid">
+						<div class="primary-overlay"></div>
+						<div class="socials">
+							<ul class="list-inline">
+								<li class="list-inline-item"><a href="https://twitter.com/Sharma__Tushar" target="_blank"><i class="fa fa-twitter"></i></a></li>
+								<li class="list-inline-item"><a href="http://www.tusharma.in/" target="_blank"><i class="fa fa-globe"></i></a></li>							</ul>
+						</div>
+					</div>
+					<div class="content text-center">
+						<h5><a href="http://www.tusharma.in/" target="_blank">Tushar Sharma</a></h5>
+						<p>Siemens Corporate Technology</p>
+					</div>
+				</div>
+			</div>-->
+			<div class="col-lg-3 col-md-4 col-sm-6">
+				<div class="speaker-item">
+					<div class="image">
+						<img src="images/people/pc/Vahid_Alizadeh.jpg" alt="speaker" class="img-fluid">
+						<div class="primary-overlay"></div>
+						<div class="socials">
+							<ul class="list-inline">
+								<li class="list-inline-item"><a href="https://twitter.com/vahidalizadehsk" target="_blank"><i class="fa fa-twitter"></i></a></li>
+								<li class="list-inline-item"><a href="https://www.v-alizadeh.info/" target="_blank"><i class="fa fa-globe"></i></a></li>							</ul>
+						</div>
+					</div>
+					<div class="content text-center">
+						<h5><a href="https://www.v-alizadeh.info/" target="_blank">Vahid Alizadeh</a></h5>
+						<p>DePaul University</p>
+					</div>
+				</div>
+			</div>
+						<div class="col-lg-3 col-md-4 col-sm-6">
+				<div class="speaker-item">
+					<div class="image">
+						<img src="images/people/pc/yaroslav_golubev.jpg" alt="speaker" class="img-fluid">
+						<div class="primary-overlay"></div>
+						<div class="socials">
+							<ul class="list-inline">
+								<li class="list-inline-item"><a href="https://twitter.com/areyde" target="_blank"><i class="fa fa-twitter"></i></a></li>
+								<li class="list-inline-item"><a href="https://areyde.com/" target="_blank"><i class="fa fa-globe"></i></a></li>							</ul>
+						</div>
+					</div>
+					<div class="content text-center">
+						<h5><a href="https://areyde.com/" target="_blank">Yaroslav Golobev</a></h5>
+						<p>JetBrains Research</p>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
