--- a/committee.html
+++ b/committee.html
@@ -465,7 +465,7 @@
 						</div>
 					</div>
 					<div class="content text-center">
-						<h5><a href="http://www.se.rit.edu/~mwm/" target="_blank">Mohamed Wiem Mkaouer</a></h5>
+						<h5><a href="http://www.se.rit.edu/~mwm/" target="_blank">Mohamed Mkaouer</a></h5>
 						<p>Rochester Institute of Technology</p>
 					</div>
 				</div>
