--- a/committee.html
+++ b/committee.html
@@ -372,16 +372,16 @@
 			<div class="col-lg-3 col-md-4 col-sm-6">
 				<div class="speaker-item">
 					<div class="image">
-						<img src="images/people/person_placeholder.jpg" alt="speaker" class="img-fluid">
-						<!--<div class="primary-overlay"></div>
+						<img src="images/people/pc/Francesca_Fontana.jpg" alt="speaker" class="img-fluid">
+						<div class="primary-overlay"></div>
 						<div class="socials">
 							<ul class="list-inline">
-								<li class="list-inline-item"><a href="#" target="_blank"><i class="fa fa-twitter"></i></a></li>
-								<li class="list-inline-item"><a href="#" target="_blank"><i class="fa fa-globe"></i></a></li>							</ul>
-						</div>-->
+								<!--<li class="list-inline-item"><a href="#" target="_blank"><i class="fa fa-twitter"></i></a></li>-->
+								<li class="list-inline-item"><a href="https://www.unimib.it/francesca-arcelli-fontana" target="_blank"><i class="fa fa-globe"></i></a></li>							</ul>
+						</div>
 					</div>
 					<div class="content text-center">
-						<h5><a href="#" target="_blank">Francesca Fontana</a></h5>
+						<h5><a href="https://www.unimib.it/francesca-arcelli-fontana" target="_blank">Francesca Fontana</a></h5>
 						<p>University of Milano-Bicocca</p>
 					</div>
 				</div>
