--- a/committee.html
+++ b/committee.html
@@ -436,7 +436,7 @@
 					</div>
 				</div>
 			</div>
-			<!--<div class="col-lg-3 col-md-4 col-sm-6">
+			<div class="col-lg-3 col-md-4 col-sm-6">
 				<div class="speaker-item">
 					<div class="image">
 						<img src="images/people/pc/Mel_Ó_Cinnéide.jpg" alt="speaker" class="img-fluid">
@@ -452,7 +452,7 @@
 						<p>University College Dublin</p>
 					</div>
 				</div>
-			</div>-->
+			</div>
 			<div class="col-lg-3 col-md-4 col-sm-6">
 				<div class="speaker-item">
 					<div class="image">
