--- a/committee.html
+++ b/committee.html
@@ -352,7 +352,7 @@
 					</div>
 				</div>
 			</div>
-			<!--<div class="col-lg-3 col-md-4 col-sm-6">
+			<div class="col-lg-3 col-md-4 col-sm-6">
 				<div class="speaker-item">
 					<div class="image">
 						<img src="images/people/pc/Foutse_Khomh.jpg" alt="speaker" class="img-fluid">
@@ -368,7 +368,7 @@
 						<p>Polytechnique Montréal</p>
 					</div>
 				</div>
-			</div>-->
+			</div>
 			<div class="col-lg-3 col-md-4 col-sm-6">
 				<div class="speaker-item">
 					<div class="image">
