--- a/committee.html
+++ b/committee.html
@@ -470,7 +470,7 @@
 					</div>
 				</div>
 			</div>
-			<!--<div class="col-lg-3 col-md-4 col-sm-6">
+			<div class="col-lg-3 col-md-4 col-sm-6">
 				<div class="speaker-item">
 					<div class="image">
 						<img src="images/people/pc/Mohammad_Alshayeb.jpg" alt="speaker" class="img-fluid">
@@ -486,7 +486,7 @@
 						<p>King Fahd University of Petroleum and Minerals</p>
 					</div>
 				</div>
-			</div>-->
+			</div>
 			<div class="col-lg-3 col-md-4 col-sm-6">
 				<div class="speaker-item">
 					<div class="image">
