--- a/committee.html
+++ b/committee.html
@@ -538,7 +538,7 @@
 					</div>
 				</div>
 			</div>-->
-			<!--<div class="col-lg-3 col-md-4 col-sm-6">
+			<div class="col-lg-3 col-md-4 col-sm-6">
 				<div class="speaker-item">
 					<div class="image">
 						<img src="images/people/pc/Shinpei_Hayashi.jpg" alt="speaker" class="img-fluid">
@@ -554,7 +554,7 @@
 						<p>Tokyo Institute of Technology</p>
 					</div>
 				</div>
-			</div>-->
+			</div>
 			<div class="col-lg-3 col-md-4 col-sm-6">
 				<div class="speaker-item">
 					<div class="image">
