updated sumbission date

--- a/index.html
+++ b/index.html
@@ -158,7 +158,8 @@
 							<table class="table table-hover important-dates-in-sidebar">
 								<tbody>
 									<tr class="clickable-row past">
-										<td>Monday, 1 August, 2022 <span style="font-size:0.7em;">(AoE)</span><br />
+										<td><del style="text-decoration-color:red;text-decoration-thickness: 15%">Monday, 1 August, 2022 <span style="font-size:0.7em;">(AoE)</span></del><br />
+											Monday, 8 August, 2022 <span style="font-size:0.7em;">(AoE)</span><br />
 											<em>Paper Submission</em> </td>
 									</tr>
 									<tr class="clickable-row past">
