--- a/call.html
+++ b/call.html
@@ -258,11 +258,13 @@
 										<em>Paper Submission</em> </td>
 								</tr>
 								<tr class="clickable-row past">
-									<td>Wednesday, 24 August, 2022<br />
+									<td><del style="text-decoration-color:red;text-decoration-thickness: 15%">Wednesday, 24 August, 2022</del><br />
+										Wednesday, 7 September, 2022<br />
 										<em>Author Notification</em> </td>
 								</tr>
 								<tr class="clickable-row past">
-									<td>Wednesday, 7 September, 2022 <span style="font-size:0.7em;">(AoE)</span><br />
+									<td><del style="text-decoration-color:red;text-decoration-thickness: 15%">Wednesday, 7 September, 2022 <span style="font-size:0.7em;">(AoE)</span></del><br />
+										Monday, 19 September, 2022 <span style="font-size:0.7em;">(AoE)</span><br />
 										<em>Camera-ready Submission</em> </td>
 								</tr>
 								<tr class="clickable-row past">
