--- a/index.html
+++ b/index.html
@@ -156,25 +156,27 @@
 									<strong>Important Dates</strong></div>
 							</div>
 							<table class="table table-hover important-dates-in-sidebar">
-								<tbody>
-									<tr class="clickable-row past">
-										<td><del style="text-decoration-color:red;text-decoration-thickness: 15%">Monday, 1 August, 2022 <span style="font-size:0.7em;">(AoE)</span></del><br />
-											Monday, 8 August, 2022 <span style="font-size:0.7em;">(AoE)</span><br />
-											<em>Paper Submission</em> </td>
-									</tr>
-									<tr class="clickable-row past">
-										<td>Wednesday, 24 August, 2022<br />
-											<em>Author Notification</em> </td>
-									</tr>
-									<tr class="clickable-row past">
-										<td>Wednesday, 7 September, 2022 <span style="font-size:0.7em;">(AoE)</span><br />
-											<em>Camera-ready Submission</em> </td>
-									</tr>
-									<tr class="clickable-row past">
-										<td>Friday, 14 October, 2022<br />
-											<em>In-Person Workshop</em> </td>
-									</tr>
-								</tbody>
+							<tbody>
+								<tr class="clickable-row past">
+									<td><del style="text-decoration-color:red;text-decoration-thickness: 15%">Monday, 1 August, 2022 <span style="font-size:0.7em;">(AoE)</span></del><br />
+										Monday, 8 August, 2022 <span style="font-size:0.7em;">(AoE)</span><br />
+										<em>Paper Submission</em> </td>
+								</tr>
+								<tr class="clickable-row past">
+									<td><del style="text-decoration-color:red;text-decoration-thickness: 15%">Wednesday, 24 August, 2022</del><br />
+										Wednesday, 7 September, 2022<br />
+										<em>Author Notification</em> </td>
+								</tr>
+								<tr class="clickable-row past">
+									<td><del style="text-decoration-color:red;text-decoration-thickness: 15%">Wednesday, 7 September, 2022 <span style="font-size:0.7em;">(AoE)</span></del><br />
+										Monday, 19 September, 2022 <span style="font-size:0.7em;">(AoE)</span><br />
+										<em>Camera-ready Submission</em> </td>
+								</tr>
+								<tr class="clickable-row past">
+									<td>Friday, 14 October, 2022<br />
+										<em>In-Person Workshop</em> </td>
+								</tr>
+							</tbody>
 							</table>
 						</div>
 					</div>
