--- a/committee.html
+++ b/committee.html
@@ -422,6 +422,22 @@
 			<div class="col-lg-3 col-md-4 col-sm-6">
 				<div class="speaker-item">
 					<div class="image">
+						<img src="images/people/pc/Jeffrey_Yackley.jpg" alt="speaker" class="img-fluid">
+						<div class="primary-overlay"></div>
+						<div class="socials">
+							<ul class="list-inline">
+								<li class="list-inline-item"><a href="https://www.linkedin.com/in/jeffreyjyackley/" target="_blank"><i class="fa fa-globe"></i></a></li>							</ul>
+						</div>
+					</div>
+					<div class="content text-center">
+						<h5><a href="https://www.linkedin.com/in/jeffreyjyackley/" target="_blank">Jeffrey Yackley</a></h5>
+						<p>University of Michigan-Flint</p>
+					</div>
+				</div>
+			</div>
+			<div class="col-lg-3 col-md-4 col-sm-6">
+				<div class="speaker-item">
+					<div class="image">
 						<img src="images/people/pc/Mehdi_Bagherzadeh.jpg" alt="speaker" class="img-fluid">
 						<div class="primary-overlay"></div>
 						<div class="socials">
