added accepted papers

--- a/program.html
+++ b/program.html
@@ -156,7 +156,17 @@
 					<div class="content-block">
 						<div class="description-one">
 							<p>
-								Please check back later. 
+								Following are the papers accepted for the workshop. Congratulations to the authors!<br>
+							<ul>
+								<li style="color: black;margin-top: 20px">
+									<b>Empirical Evaluation of a Live Environment for Code Refactoring</b><br>
+									<span style="padding-left: 15px;" >Sara Fernandes, Ademar Aguiar and André Restivo</span>
+								</li>
+								<li style="color: black;margin-top: 5px">
+									<b>Rename Chains: An Exploratory Study on the Occurrence and Characteristics of Identifiers Undergoing Multiple Renamings</b><br>
+									<span style="padding-left: 15px;" >Anthony Peruma and Christian Newman</span>
+								</li>
+							</ul>
 							</p>
 						</div>
 					</div>
