--- a/keynote.html
+++ b/keynote.html
@@ -151,11 +151,33 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class=" align-self-center">
+			<div class="col-lg-5 col-md-6 align-self-center">
+				<div class="image-block two bg-about">
+					<img class="img-fluid" src="images/people/pc/James_Ivers.png" alt="">
+				</div>
+				<div class="socials" style="justify-content: center; text-align: center; padding-top: 10px;">
+					<ul class="list-inline">
+						<li class="list-inline-item"><a href="https://scholar.google.com/citations?user=IrL_RkYAAAAJ&hl=en" target="_blank"><i class="fa fa-globe" style="font-size: xxx-large;"></i></a></li>
+						<!--
+						&nbsp;&nbsp;&nbsp;
+						<li class="list-inline-item"><a href="https://twitter.com/timofeybryksin" target="_blank"><i class="fa fa-twitter" style="font-size: xxx-large;"></i></a></li>		
+						&nbsp;&nbsp;&nbsp;
+						<li class="list-inline-item"><a href="#" target="_blank"><i class="fa fa-file-pdf-o" style="font-size: xxx-large;"></i></a></li>							
+						-->
+					</ul>
+				</div>
+			</div>
+			<div class="col-lg-6 col-md-6 align-self-center ml-lg-auto">
 				<div class="content-block">
+					<h2>James <span class="alternate">Ivers</span></h2>
 					<div class="description-one">
-						<p>
-							Please check back later. 
+						<p><h6>Scaling Refactoring</h6></p>
+					</div>
+					<div class="description-two">						
+						<p><b>Abstract:</b> Refactoring is an increasingly well studied practice at small scales, with most tool support and research focusing on floss refactoring.  However, industry engages in refactoring at many scales and the implications for practices, tools, and needed research are less well understood.  This talk will describe ways in which large-scale refactoring differs from more local refactoring efforts, industry examples of larger problems, results from an industry survey on large-scale refactoring, and a few automation needs that would help industry scale refactoring activities.
+						</p>
+						<br>
+						<p><b>Bio:</b> James Ivers a Principal Engineer at the Carnegie Mellon Software Engineering Institute and the lead of its Software Architecture group.  This group helps government and industry organizations by creating, applying, and transitioning technology to accelerate adoption of proven architecture modeling and analysis techniques.  He is a co-author of the Documenting Software Architectures book and numerous papers on software architecture and program analysis. His work at the SEI has included developing tools and approaches for analyzing and recovering the architectures of implemented systems and helping organizations improve their software architectures.  Prior to joining the SEI, he developed commercial static and dynamic code analysis tools and served as the architect at a mobile computing startup.
 						</p>
 					</div>
 				</div>
