added detailed sechedule

--- a/program.html
+++ b/program.html
@@ -178,29 +178,166 @@
 =            Schedule            =
 ===============================-->
 
-<section class="section about" style="padding-top:20px; padding-bottom: 0px;">
+<section class="section schedule" style="padding: 0% !important;">
 	<div class="container">
 		<div class="row">
 			<div class="col-12">
-				<!-- Section Title -->
 				<div class="section-title">
-					<h3>Workshop <span class="alternate">Program</span></h3>
+					<h3>Program <span class="alternate">Schedule</span></h3>
+					<p><strong>All dates/times are Eastern Time (US & Canada)</strong></p>
 				</div>
 			</div>
 		</div>
 		<div class="row">
-			<div class=" align-self-center">
-				<div class="content-block">
-					<div class="description-one">
-						<p>
-							Please check back later. 
-						</p>
-					</div>
+			<div class="col-12">
+				<div class="schedule-tab">
+					<ul class="nav nav-pills text-center">
+					  <li class="nav-item">
+					    <a class="nav-link active" href="#nov20" data-toggle="pill">
+					    	14 October 2022
+					    </a>
+					  </li>
+					</ul>
 				</div>
+				<div class="schedule-contents bg-schedule">
+					<div class="tab-content" id="pills-tabContent">
+						<div class="tab-pane fade show active schedule-item" id="nov20">
+							<!-- Headings -->
+							<ul class="m-0 p-0">
+								<li class="headings">
+									<div class="time"><span>Time<br>(EST)</span></div>
+									<div class="time"><span>Duration<br>(minutes)</span></div>
+									<div class="time">Section</div>
+									<div class="subject">Presentation</div>
+								</li>
+								<!-- Schedule Details -->
+								<li class="schedule-details">
+									<div class="block">
+										<!-- time -->
+										<div class="time">
+											<span class="time">08:30 AM</span>
+										</div>
+										<!-- Speaker -->
+										<div class="time">10</div>
+										<!-- Venue -->
+										<div class="time">Opening</div>
+										<!-- Subject -->
+										<div class="subject">Welcome to IWoR 2022</div>
+									</div>
+								</li>
+								<li class="schedule-details">
+									<div class="block">
+										<!-- time -->
+										<div class="time">
+											<span class="time">08:40 AM</span>
+										</div>
+										<!-- Speaker -->
+										<div class="time">60</div>
+										<!-- Venue -->
+										<div class="time">Keynote</div>
+										<!-- Subject -->
+										<div class="subject">Scaling Refactoring</div>
+									</div>
+								</li>
+								<li class="schedule-details">
+									<div class="block">
+										<!-- time -->
+										<div class="time">
+											<span class="time">09:40 AM</span>
+										</div>
+										<!-- Speaker -->
+										<div class="time">20</div>
+										<!-- Venue -->
+										<div class="time">Product Announcement</div>
+										<!-- Subject -->
+										<div class="subject">A Software Refactoring Community Infrastructure</div>
+
+									</div>
+								</li>
+								<li class="schedule-details">
+									<div class="block">
+										<!-- time -->
+										<div class="time">
+											<span class="time">10:00 AM</span>
+										</div>
+										<!-- Speaker -->
+										<div class="time">30</div>
+										<!-- Venue -->
+										<div class="time">Social</div>
+										<!-- Subject -->
+										<div class="time">Coffee Break</div>
+
+									</div>
+								</li>
+								<li class="schedule-details">
+									<div class="block">
+										<!-- time -->
+										<div class="time">
+											<span class="time">10:30 AM</span>
+										</div>
+										<!-- Speaker -->
+										<div class="time">20</div>
+										<!-- Venue -->
+										<div class="time">Paper 1</div>
+										<!-- Subject -->
+										<div class="time">Empirical Evaluation of a Live Environment for Code Refactoring</div>
+
+									</div>
+								</li>
+								<li class="schedule-details">
+									<div class="block">
+										<!-- time -->
+										<div class="time">
+											<span class="time">10:50 AM</span>
+										</div>
+										<!-- Speaker -->
+										<div class="time">20</div>
+										<!-- Venue -->
+										<div class="time">Paper 2</div>
+										<!-- Subject -->
+										<div class="time">Rename Chains: An Exploratory Study on the Occurrence and Characteristics of Identifiers Undergoing Multiple Renamings</div>
+									
+									</div>
+								</li>
+								<li class="schedule-details">
+									<div class="block">
+										<!-- time -->
+										<div class="time">
+											<span class="time">11:10 AM</span>
+										</div>
+										<!-- Speaker -->
+										<div class="time">10</div>
+										<!-- Venue -->
+										<div class="time">Closing</div>
+										<!-- Subject -->
+										<div class="time">See you at IWOR 2023!</div>
+									</div>
+								</li>
+								<li class="schedule-details">
+									<div class="block">
+										<!-- time -->
+										<div class="time">
+											<span class="time">12:00 PM</span>
+										</div>
+										<!-- Speaker -->
+										<div class="time">90</div>
+										<!-- Venue -->
+										<div class="time">Social</div>
+										<!-- Subject -->
+										<div class="time">Lunch</div>
+									</div>
+								</li>
+							</ul>
+						</div>
+
+				</div>				
 			</div>
 		</div>
 	</div>
 </section>
+
+<!--====  End of Schedule  ====-->
+
 
 
 
